# v8-to-istanbul-rs

./: .gitignore  Cargo.toml  README.md
src/: format.rs  fputil.rs  main.rs  statement.rs  timer.rs  translate.rs  traverse.rs
src/cmd/: convert.rs
src/format/: istanbul.rs  lcov.rs  script_coverage.rs
tests-generate/: README.md  index.html  package.json  playwright.config.js  run.sh
tests-generate/src/: branchMap.js  fnMap.js  main.js
tests-generate/tests/: coverage.js  example.spec.js
tests/base/: main.min.js  main.min.js.map  source_map_link.json  v8-coverage.json
tests/base/src/: App.js  branchMap.js  main.js
tests/branch/: main.min.js  main.min.js.map  v8-coverage.json
tests/jsx/: main.4fb9715b.chunk.css  main.4fb9715b.chunk.css.map  main.f272a57c.chunk.js  main.f272a57c.chunk.js.map  source_map_link.json  v8-coverage.json
tests/jsx/src/: App.js  Hello.js  index.html  index.js  register-service-worker.js
tests/jsx/src/@types/: asset.d.ts  css-modules.d.ts
tests/jsx/src/TodoList/: index.js  model.js
