[package]
name = "v8-to-istanbul"
version = "0.1.1"
edition = "2021"
authors = ["HJin<hjin.me@qq.com>"]
description = "A tool to convert v8 coverage to istanbul format"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
sourcemap = "9.0.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_builder = "0.20.0"
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha1 = "0.10.6"
hex = "0.4.3"
clap = { version = "4.5.15", features = ["derive"] }
rayon = "1.10.0"
regex = "1.10.6"
lcov2 = "0.1.0"
glob = "0.3.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
